feat(#55): add custom CSS variable for total water graphic color

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -24,6 +24,9 @@
   /* Title color */
   --color-title: #051c1f;
 
+  /* Graphic total water */
+  --color-total-water: #26d6ed;
+
   /* Accesible visited link color */
   --color-visited-link: #257782;
 
